// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders blog page 1`] = `
<div
  className="root"
>
  <Header
    location={
      Object {
        "hash": "",
        "pathname": "/blog/page.md",
        "search": "",
      }
    }
    searchIndex={Array []}
    setSearchResults={[Function]}
  />
  <BlogPage
    Page={[Function]}
    blogHero={null}
    className="App"
    location={
      Object {
        "hash": "",
        "pathname": "/blog/page.md",
        "search": "",
      }
    }
    plugins={Array []}
  />
</div>
`;

exports[`App renders first page at index if found 1`] = `
<div
  className="root"
>
  <Header
    location={
      Object {
        "hash": "#foo",
        "pathname": "/",
      }
    }
    searchIndex={Array []}
    setSearchResults={[Function]}
  />
  <DocsPage
    Page={[Function]}
    SidebarComponent={[Function]}
    className="App"
    location={
      Object {
        "hash": "#foo",
        "pathname": "/",
      }
    }
    plugins={Array []}
  />
</div>
`;

exports[`App renders home page 1`] = `
<div
  className="root"
>
  <Header
    location={
      Object {
        "pathname": "/home",
      }
    }
    searchIndex={Array []}
    setSearchResults={[Function]}
  />
  <home
    className="Page"
    plugins={Array []}
  />
</div>
`;

exports[`App renders matched page 1`] = `
<div
  className="root"
>
  <Header
    location={
      Object {
        "pathname": "/foo",
      }
    }
    searchIndex={Array []}
    setSearchResults={[Function]}
  />
  <DocsPage
    Page={[Function]}
    SidebarComponent={[Function]}
    className="App"
    location={
      Object {
        "pathname": "/foo",
      }
    }
    plugins={Array []}
  />
</div>
`;
